--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,16 +9,16 @@
     <!-- Bootstrap core CSS -->
     <link th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.css}" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link th:href="@{/asserts/css/signin.css}" rel="stylesheet">
+    <link th:href="@{/assets/css/signin.css}" rel="stylesheet">
 </head>
 <body class="text-center">
-<form class="form-signin" th:action="@{/user/login}" method="post">
-    <img class="mb-4" th:src="@{/asserts/img/bootstrap-solid.svg}" alt="" width="72" height="72">
+<form class="form-signin" th:action="@{/login}" method="post">
+    <img class="mb-4" th:src="@{/assets/img/logo.png}" alt="" width="300" height="120">
     <h1 class="h3 mb-3 font-weight-normal" th:text="#{login.tip}">Please sign in</h1>
     <!--判断生效才显示-->
     <p style="color: red" th:text="${msg}" th:if="${not #strings.isEmpty(msg)}"></p>
-    <label class="sr-only" th:text="#{login.username}">Username</label>
-    <input type="text" name="username" class="form-control" th:placeholder="#{login.username}" required="" autofocus="">
+    <label class="sr-only" th:text="#{login.email}">Email</label>
+    <input type="text" name="email" class="form-control" th:placeholder="#{login.email}" required="" autofocus="">
     <label class="sr-only" th:text="#{login.password}">Password</label>
     <input type="password" name="password" class="form-control" th:placeholder="#{login.password}" required="">
     <div class="checkbox mb-3">
