--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Signin Template for Bootstrap</title>
+    <title th:text="#{login.tip}">Login</title>
     <!-- Bootstrap core CSS -->
     <link th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.css}" rel="stylesheet">
     <!-- Custom styles for this template -->
@@ -27,7 +27,10 @@
         </label>
     </div>
     <button class="btn btn-lg btn-primary btn-block" type="submit" th:text="#{login.btn}">Sign in</button>
-    <p class="mt-5 mb-3 text-muted">© 2019-2020</p>
+    <a class="btn btn-lg btn-info btn-block" href="/signup.html" th:text="#{signup.btn}">
+        Sign up
+    </a>
+    <p class="mt-5 mb-3 text-muted">© 2019-2020 by 党昊天</p>
     <a class="btn btn-sm" th:href="@{/index.html(l='zh_CN')}">中文</a>
     <a class="btn btn-sm" th:href="@{/index.html(l='en_US')}">English</a>
 </form>
