--- a/src/main/resources/templates/commons/bar.html
+++ b/src/main/resources/templates/commons/bar.html
@@ -33,8 +33,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="http://getbootstrap.com/docs/4.0/examples/dashboard/#"
-                   th:class="${activeUri=='emps'?'nav-link active':'nav-link'}">
+                <a class="nav-link" th:href="@{/users}">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                          class="feather feather-users">
