--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -12,40 +12,8 @@
 
 </head>
 <body class="text-center">
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" href="#">
-    <img th:src="@{/assets/img/logo_mini.png}">
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-        <div class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
+<!--引入user-topbar-->
+<div th:replace="commons/bar::user-topbar"></div>
 
 <main role="main">
 
@@ -55,7 +23,7 @@
 
       <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
         <div class="list-group">
-          <a th:href="@{/books/工学}" class="list-group-item list-group-item-action active">工学</a>
+          <a th:href="@{/books/工学}" class="list-group-item list-group-item-action">工学</a>
           <a th:href="@{/books/文学}" class="list-group-item list-group-item-action">文学</a>
           <a th:href="@{/books/管理学}" class="list-group-item list-group-item-action">管理学</a>
           <a th:href="@{/books/法学}" class="list-group-item list-group-item-action">法学</a>
@@ -97,6 +65,19 @@
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="/docs/assets/js/vendor/jquery.slim.min.js"><\/script>')</script><script src="/assets/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script>
 <script th:src="@{/assets/js/offcanvas.js}"></script>
+<script>
+  $(function () {
+    var theme = window.location.pathname.split("/");
+    theme = theme[theme.length - 1];
+    theme = decodeURI(theme);
+    var items = $(".list-group-item-action");
+    for (i = 0; i < items.length; i++) {
+      if (items[i].text === theme) {
+        items[i].classList.add("active")
+      }
+    }
+  })
+</script>
 </body>
 
 </html>
