--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -40,7 +40,7 @@
       <div class="col-xs-12 col-sm-9">
         <div class="row">
           <div class="col-xs-6 col-lg-4" th:each="book:${books}">
-            <a href="">
+            <a th:href="@{/book/}+${book.id}">
               <img th:src="${book.imageUrl}">
             </a>
             <h5 th:text="${book.title}"></h5>
