--- a/src/main/resources/templates/commons/bar.html
+++ b/src/main/resources/templates/commons/bar.html
@@ -47,7 +47,8 @@
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <button style="margin-right: 0.5rem" class="btn btn-outline-success my-2 my-sm-0" type="submit">搜索</button>
+            <a class="btn btn-outline-danger my-2 my-sm-0" th:href="@{/user/logout}">退出</a>
         </form>
     </div>
 </nav>
