--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
     <link th:href="@{/assets/css/signin.css}" rel="stylesheet">
 </head>
 <body class="text-center">
-<form class="form-signin" th:action="@{/login}" method="post">
+<form class="form-signin" th:action="@{/user/login}" method="post">
     <img class="mb-4" th:src="@{/assets/img/logo.png}" alt="" width="300" height="120">
     <h1 class="h3 mb-3 font-weight-normal" th:text="#{login.tip}">Please sign in</h1>
     <!--判断生效才显示-->
